// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. 360 video 1`] = `
<div>
  <div>
    <div>
      <IconVideo360Player
        fillColour="#FFFFFF"
        height={100}
      />
    </div>
    <video
      poster="ad893a546e726c9a0da65d0ae1add0a1"
    />
  </div>
</div>
`;

exports[`2. player icon for 360 video not displayed after play 1`] = `
<div>
  <div>
    <video
      poster="ad893a546e726c9a0da65d0ae1add0a1"
    />
  </div>
</div>
`;
